--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Prerequisites
 *.d
-.vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
 
 # Compiled Object files
 *.slo
